Height issue fixed but still working on spacing

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -160,7 +160,8 @@ footer{
 	display: flex;
 	flex-direction: column;
 	padding: 2% 5%;
-	height: 100%;
+	height: 1500px;
+	margin: 0 auto;
 } 
 
 .headserv{
@@ -184,7 +185,6 @@ header {
 	padding: 2% 0%;
 	border-bottom: black 1px solid;
 	padding-top: 1%;
-	align-content: space-between;
 }
 
 .boxes{
